# operator-framework

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  process.rs  selectors.rs  tracker.rs  utils.rs
src/conditions/: k8s.rs  mod.rs
src/install/: config.rs  delete.rs  meta.rs  mod.rs  resources.rs  value.rs
src/install/container/: args.rs  env.rs  mod.rs  port.rs  resources.rs  volumes.rs
