[package]
name = "operator-framework"
version = "0.2.0"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
edition = "2018"
keywords = ["kubernetes", "operator"]
license = "EPL-2.0"
description = "Tools and helpers used to create Kubernetes operators"

[dependencies]

anyhow = "1.0"
log = "0.4"

kube = "0.37"
kube-derive = "0.37"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

sha1 = "0.6"

k8s-openapi = { version = "0.9" }

[dev-dependencies]

k8s-openapi = { version = "0.9", features = [ "v1_17" ] }

[features]

default = []

# choose k8s API version, align with k8s-openapi features
v1_11 = [ "k8s-openapi/v1_11" ]
v1_12 = [ "k8s-openapi/v1_12" ]
v1_13 = [ "k8s-openapi/v1_13" ]
v1_14 = [ "k8s-openapi/v1_14" ]
v1_15 = [ "k8s-openapi/v1_15" ]
v1_16 = [ "k8s-openapi/v1_16" ]
v1_17 = [ "k8s-openapi/v1_17" ]
v1_18 = [ "k8s-openapi/v1_18" ]

[patch.crates-io]
#kube = { git = "https://github.com/clux/kube-rs", branch="master" }