[package]
name = "operator-framework"
version = "0.6.0"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
edition = "2021"
keywords = ["kubernetes", "operator"]
license = "EPL-2.0"
description = "Tools and helpers used to create Kubernetes operators"
repository = "https://github.com/ctron/operator-framework"

[dependencies]

anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
either = "1.6"
futures = "0.3"
k8s-openapi = { version = "0.14" }
kube = { version = "0.68", features = ["derive"] }
log = "0.4"
schemars = { version = "0.8", optional = true }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha1 = "0.6"

[dev-dependencies]

k8s-openapi = { version = "0.14", features = ["v1_21"] }

[features]

default = []

# choose k8s API version, align with k8s-openapi features
v1_16 = ["k8s-openapi/v1_16"]
v1_17 = ["k8s-openapi/v1_17"]
v1_18 = ["k8s-openapi/v1_18"]
v1_19 = ["k8s-openapi/v1_19"]
v1_20 = ["k8s-openapi/v1_20"]
v1_21 = ["k8s-openapi/v1_21"]
v1_22 = ["k8s-openapi/v1_22"]

schemas = ["schemars", "k8s-openapi/schemars"]

[patch.crates-io]
#kube = { path = "../kube-rs/kube" }
#kube = { git = "https://github.com/ctron/kube-rs", rev = "59f175adc61575b83c01fc8809ea70cb7c172ebb" }